--- a/demostation.ipynb
+++ b/demostation.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,13 +60,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "SELECT cloveri.interns.id, cloveri.interns.email, cloveri.interns.username, cloveri.interns.user_role, cloveri.interns.internship, cloveri.interns.start_date, cloveri.interns.end_date, cloveri.interns.notes \n",
+      "FROM cloveri.interns\n",
+      "\n",
       "f1 Miguel Aubakirov Кабинет Кловери\n",
       "f2 Miguel Aubakirov MAIBO\n",
       "f3 Nombre Apellido Кабинет Кловери\n",
@@ -82,6 +85,7 @@
     "\n",
     "with session_factory() as session:\n",
     "    stmt = select(InternsOrm)\n",
+    "    print(f\"{stmt.compile(compile_kwargs={\"literal_binds\": True})}\\n\")\n",
     "    result = session.execute(stmt)\n",
     "    interns = result.scalars().all()\n",
     "    for model in interns:\n",
@@ -97,19 +101,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SELECT cloveri.interns.id, cloveri.interns.email, cloveri.interns.username, cloveri.interns.role, cloveri.interns.internship, cloveri.interns.start_date, cloveri.interns.end_date, cloveri.interns.notes \n",
+      "SELECT cloveri.interns.id, cloveri.interns.email, cloveri.interns.username, cloveri.interns.user_role, cloveri.interns.internship, cloveri.interns.start_date, cloveri.interns.end_date, cloveri.interns.notes \n",
       "FROM cloveri.interns \n",
       "WHERE (cloveri.interns.email LIKE '%' || 'work.aubakirov@gmail.com' || '%')\n",
       "\n",
-      "f1 Miguel Aubakirov Кабинет Кловери\n",
-      "f2 Miguel Aubakirov MAIBO\n"
+      "f1 Miguel Aubakirov Кабинет Кловери Python-программист\n",
+      "f2 Miguel Aubakirov MAIBO Python-программист\n"
      ]
     }
    ],
@@ -130,7 +134,7 @@
     "    result = session.execute(query)\n",
     "    interns = result.scalars().all()\n",
     "    for model in interns:\n",
-    "        print(model.id, model.username, model.internship)"
+    "        print(model.id, model.username, model.internship, model.user_role)"
    ]
   },
   {
@@ -178,40 +182,303 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Объединим все таблицы в одну, получим их как объекты класса `InternsOrm` и `Pandas.DataFrame`."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SELECT cloveri.tools.id, cloveri.tools.role, cloveri.tools.internship, cloveri.tools.pycaret, cloveri.tools.random_forest, cloveri.tools.\"anomaly_detеction\", cloveri.tools.\"gradient_Boosting\", cloveri.tools.cluster_analysis, cloveri.tools.k_fold, cloveri.tools.optuna, cloveri.tools.shap, cloveri.tools.tsfresh, cloveri.tools.sklearn_feature_selection, cloveri.tools.imblearn, cloveri.tools.streamlit, cloveri.tools.selenium, cloveri.tools.allure, cloveri.tools.nose, cloveri.tools.\"simpleTest\", cloveri.tools.docker, cloveri.tools.jira, cloveri.tools.adobe_xd, cloveri.tools.figma, cloveri.tools.mockplus, cloveri.tools.yandex_metrika, cloveri.tools.google_analytics, cloveri.tools.sketch, cloveri.tools.fontjoy, cloveri.tools.sqlalchemy, cloveri.tools.postgresql, cloveri.tools.git, cloveri.tools.django \n",
-      "FROM cloveri.tools\n",
+      "SELECT i.id, i.email, i.username, i.user_role, i.internship, i.start_date, i.end_date, i.notes, g.intern_id, g.id AS id_1, g.ai, g.programming, g.architecture, g.project_management, g.communication, g.personnel_management, g.information_management, g.infrastructure, g.data_management, g.math, g.data_analysis, g.visual, g.ux_ui, g.seo, g.typografy, g.skill18, g.skill19, g.skill20, t.id AS id_2, t.user_role AS user_role_1, t.internship AS internship_1, t.pycaret, t.random_forest, t.anomaly_detection, t.gradient_boosting, t.cluster_analysis, t.k_fold, t.optuna, t.shap, t.tsfresh, t.sklearn_feature_selection, t.imblearn, t.streamlit, t.selenium, t.allure, t.nose, t.simpletest, t.docker, t.jira, t.adobe_xd, t.figma, t.mockplus, t.yandex_metrika, t.google_analytics, t.sketch, t.fontjoy, t.sqlalchemy, t.postgresql, t.git, t.django \n",
+      "FROM cloveri.grades AS g JOIN cloveri.interns AS i ON i.id = g.intern_id JOIN cloveri.tools AS t ON i.user_role = t.user_role \n",
+      "WHERE i.internship = t.internship\n",
+      "\n",
+      "<models.InternsOrm object at 0x000001B2E6896DE0>\n",
+      "<models.InternsOrm object at 0x000001B2E6894FB0>\n",
+      "<models.InternsOrm object at 0x000001B2E6896F90>\n",
+      "<models.InternsOrm object at 0x000001B2E6895F70>\n",
+      "<models.InternsOrm object at 0x000001B2E6896480>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "id                                              f1\n",
+       "email                     work.aubakirov@gmail.com\n",
+       "username                          Miguel Aubakirov\n",
+       "user_role                       Python-программист\n",
+       "internship                         Кабинет Кловери\n",
+       "start_date                     2025-01-15 00:00:00\n",
+       "end_date                       2025-04-28 00:00:00\n",
+       "intern_id                                       f1\n",
+       "id_1                                            g1\n",
+       "ai                                             4.4\n",
+       "programming                                    4.2\n",
+       "architecture                                   3.4\n",
+       "project_management                             4.0\n",
+       "communication                                  5.4\n",
+       "personnel_management                           3.4\n",
+       "information_management                         5.4\n",
+       "infrastructure                                 4.7\n",
+       "data_management                                3.4\n",
+       "math                                           5.8\n",
+       "data_analysis                                  4.0\n",
+       "id_2                                            t1\n",
+       "user_role_1                     Python-программист\n",
+       "internship_1                       Кабинет Кловери\n",
+       "pycaret                                       True\n",
+       "optuna                                        True\n",
+       "docker                                        True\n",
+       "jira                                          True\n",
+       "sqlalchemy                                    True\n",
+       "postgresql                                    True\n",
+       "git                                           True\n",
+       "django                                        True\n",
+       "Name: 0, dtype: object"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sqlalchemy import select, func\n",
+    "from sqlalchemy.orm import aliased\n",
+    "from database import session_factory\n",
+    "from models import InternsOrm, GradesOrm, ToolsOrm\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "i = aliased(InternsOrm, name=\"i\")\n",
+    "g = aliased(GradesOrm, name=\"g\")\n",
+    "t = aliased(ToolsOrm, name=\"t\")\n",
+    "\n",
+    "with session_factory() as session:\n",
+    "    stmt = (select(i, g, t)\n",
+    "            .join(i, i.id == g.intern_id)\n",
+    "            .join(t, i.user_role == t.user_role)\n",
+    "            .where(i.internship == t.internship))\n",
+    "    print(f\"{stmt.compile(compile_kwargs={\"literal_binds\": True})}\\n\")\n",
+    "    result = session.execute(stmt)\n",
+    "    interns = result.scalars().all()\n",
+    "    for model in interns:\n",
+    "        print(model)\n",
+    "    # для удобства запишем результат запроса в pandas\n",
+    "    df = pd.read_sql(stmt, session.bind)\n",
+    "\n",
+    "df.iloc[0].dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В тестовом задании просили написать SQL-запрос, который выведет все сертификаты, для которых не заданы навыки, которые есть у владельца сертификата.\n",
+    "\n",
+    "Пользователь Miguel Aubakirov, прошедший стажировку в Кабинете Кловери на позиции Python-программиста имеет следующие навыки:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT t.id, t.user_role, t.internship, t.pycaret, t.random_forest, t.anomaly_detection, t.gradient_boosting, t.cluster_analysis, t.k_fold, t.optuna, t.shap, t.tsfresh, t.sklearn_feature_selection, t.imblearn, t.streamlit, t.selenium, t.allure, t.nose, t.simpletest, t.docker, t.jira, t.adobe_xd, t.figma, t.mockplus, t.yandex_metrika, t.google_analytics, t.sketch, t.fontjoy, t.sqlalchemy, t.postgresql, t.git, t.django \n",
+      "FROM cloveri.tools AS t JOIN cloveri.interns AS i ON i.user_role = t.user_role \n",
+      "WHERE i.internship = t.internship\n",
+      "\n",
+      "<models.ToolsOrm object at 0x000001B2E68C6E70>\n",
+      "<models.ToolsOrm object at 0x000001B2E68C6E70>\n",
+      "<models.ToolsOrm object at 0x000001B2E68C7350>\n",
+      "<models.ToolsOrm object at 0x000001B2E68C7B30>\n",
+      "<models.ToolsOrm object at 0x000001B2E68C4B30>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'user_role', 'internship', 'pycaret', 'random_forest',\n",
+       "       'anomaly_detection', 'gradient_boosting', 'cluster_analysis', 'k_fold',\n",
+       "       'optuna', 'shap', 'tsfresh', 'sklearn_feature_selection', 'imblearn',\n",
+       "       'streamlit', 'selenium', 'allure', 'nose', 'simpletest', 'docker',\n",
+       "       'jira', 'adobe_xd', 'figma', 'mockplus', 'yandex_metrika',\n",
+       "       'google_analytics', 'sketch', 'fontjoy', 'sqlalchemy', 'postgresql',\n",
+       "       'git', 'django'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sqlalchemy import select, func\n",
+    "from sqlalchemy.orm import aliased\n",
+    "from database import session_factory\n",
+    "from models import InternsOrm, GradesOrm, ToolsOrm\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "i = aliased(InternsOrm, name=\"i\")\n",
+    "t = aliased(ToolsOrm, name=\"t\")\n",
+    "\n",
+    "with session_factory() as session:\n",
+    "    stmt = (select(t)\n",
+    "            .join(i, i.user_role == t.user_role and i.internship == t.internship)\n",
+    "            .filter(i.internship == t.internship)\n",
+    "            .filter()\n",
+    "            )\n",
+    "    print(f\"{stmt.compile(compile_kwargs={\"literal_binds\": True})}\\n\")\n",
+    "    result = session.execute(stmt)\n",
+    "    interns = result.scalars().all()\n",
+    "    for model in interns:\n",
+    "        print(model)\n",
+    "    # для удобства запишем результат запроса в pandas\n",
+    "    df = pd.read_sql(stmt, session.bind)\n",
+    "\n",
+    "df.iloc[0].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['pycaret', 'optuna', 'docker', 'jira', 'sqlalchemy', 'postgresql',\n",
+       "       'git', 'django'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0].dropna().index[3:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SELECT json_object_keys(to_json(json_populate_record(NULL::cloveri.tools, '{}'::JSON)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SELECT t.id, t.user_role, t.internship, t.pycaret, t.random_forest, t.anomaly_detection, t.gradient_boosting, t.cluster_analysis, t.k_fold, t.optuna, t.shap, t.tsfresh, t.sklearn_feature_selection, t.imblearn, t.streamlit, t.selenium, t.allure, t.nose, t.simpletest, t.docker, t.jira, t.adobe_xd, t.figma, t.mockplus, t.yandex_metrika, t.google_analytics, t.sketch, t.fontjoy, t.sqlalchemy, t.postgresql, t.git, t.django \n",
+      "FROM cloveri.tools AS t JOIN cloveri.interns AS i ON i.user_role = t.user_role \n",
+      "WHERE i.internship = t.internship AND i.id = 'f1'\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "from sqlalchemy import select, func\n",
-    "from database import session_factory\n",
-    "from models import ToolsOrm\n",
-    "\n",
     "with session_factory() as session:\n",
-    "    stmt = select(ToolsOrm)\n",
-    "    print(f\"{stmt.compile(compile_kwargs={\"literal_binds\": True})}\\n\")\n",
-    "    #result = session.execute(stmt)\n",
-    "    #interns = result.scalars().all()\n",
-    "    #for model in interns:\n",
-    "    #    print(model)"
+    "    stmt = (select(t)\n",
+    "            .join(i, i.user_role == t.user_role and i.internship == t.internship)\n",
+    "            .filter(i.internship == t.internship)\n",
+    "            .filter(i.id == 'f1')\n",
+    "            )\n",
+    "    print(f\"{stmt.compile(compile_kwargs={\"literal_binds\": True})}\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['id',\n",
+       " 'user_role',\n",
+       " 'internship',\n",
+       " 'pycaret',\n",
+       " 'random_forest',\n",
+       " 'anomaly_detection',\n",
+       " 'gradient_boosting',\n",
+       " 'cluster_analysis',\n",
+       " 'k_fold',\n",
+       " 'optuna',\n",
+       " 'shap',\n",
+       " 'tsfresh',\n",
+       " 'sklearn_feature_selection',\n",
+       " 'imblearn',\n",
+       " 'streamlit',\n",
+       " 'selenium',\n",
+       " 'allure',\n",
+       " 'nose',\n",
+       " 'simpletest',\n",
+       " 'docker',\n",
+       " 'jira',\n",
+       " 'adobe_xd',\n",
+       " 'figma',\n",
+       " 'mockplus',\n",
+       " 'yandex_metrika',\n",
+       " 'google_analytics',\n",
+       " 'sketch',\n",
+       " 'fontjoy',\n",
+       " 'sqlalchemy',\n",
+       " 'postgresql',\n",
+       " 'git',\n",
+       " 'django']"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sqlalchemy import inspect\n",
+    "\n",
+    "inst = inspect(model)\n",
+    "attr_names = [c_attr.key for c_attr in inst.mapper.column_attrs]\n",
+    "attr_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cloveri.tools\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(inspect(model.__table__))"
+   ]
   }
  ],
  "metadata": {
